[gd_scene load_steps=12 format=3 uid="uid://sfinjguu5eqh"]

[ext_resource type="Script" path="res://logic/plane.gd" id="1_sl2pc"]
[ext_resource type="Texture2D" uid="uid://djw40ufctbg5c" path="res://art/plane/plane.png" id="1_xputg"]
[ext_resource type="Texture2D" uid="uid://dcqwjs3s0j884" path="res://art/plane/plane1.png" id="2_axbi5"]
[ext_resource type="Script" path="res://logic/plane_description.gd" id="3_asivw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tf517"]
size = Vector2(14, 14)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_grdkt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8dinf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w28rx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0e430"]

[sub_resource type="SystemFont" id="SystemFont_2hn8o"]
font_names = PackedStringArray("Consolas")
subpixel_positioning = 0

[sub_resource type="Theme" id="Theme_78tov"]
Button/styles/focus = SubResource("StyleBoxEmpty_grdkt")
Button/styles/hover = SubResource("StyleBoxEmpty_8dinf")
Button/styles/normal = SubResource("StyleBoxEmpty_w28rx")
Button/styles/pressed = SubResource("StyleBoxEmpty_0e430")
Label/colors/font_color = Color(0, 0.682353, 1, 1)
Label/font_sizes/font_size = 13
Label/fonts/font = SubResource("SystemFont_2hn8o")

[node name="plane_body" type="CharacterBody2D"]
floor_constant_speed = true
script = ExtResource("1_sl2pc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_tf517")
disabled = true
one_way_collision_margin = 0.0

[node name="body" type="Sprite2D" parent="."]
scale = Vector2(0.04, 0.04)
texture = ExtResource("1_xputg")

[node name="direction" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.07)
texture = ExtResource("2_axbi5")
offset = Vector2(0, -450)

[node name="plane_description" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
theme = SubResource("Theme_78tov")
script = ExtResource("3_asivw")

[node name="VBoxContainer" type="VBoxContainer" parent="plane_description"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.115
anchor_top = 0.518
anchor_right = 0.115
anchor_bottom = 0.518
offset_left = 16.0
offset_top = -15.0
offset_right = 99.0
offset_bottom = 17.0

[node name="callsign" type="Label" parent="plane_description/VBoxContainer"]
layout_mode = 2
text = "XYZ-1234"

[node name="HBoxContainer" type="HBoxContainer" parent="plane_description/VBoxContainer"]
layout_mode = 2

[node name="heading" type="Label" parent="plane_description/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "000Â°"

[node name="altitude" type="Label" parent="plane_description/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "00000ft"

[node name="button" type="Button" parent="plane_description"]
layout_mode = 0
offset_left = -12.0
offset_top = -17.0
offset_right = 101.0
offset_bottom = 16.0

[connection signal="mouse_entered" from="plane_description/button" to="plane_description" method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="plane_description/button" to="plane_description" method="_on_button_mouse_exited"]
[connection signal="pressed" from="plane_description/button" to="plane_description" method="_on_button_pressed"]
